[package]
name = "ru_history"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
str_tools = "0.1.0"
#str_tools={path="../../mlibs/str_tools/"}

#bogobble = {path="../../mlibs/bogobble/"}
bogobble = "0.1.1"
rand = "0.8.3"
err_tools = "0.1.1"
#err_tools = {path="../../mlibs/err_tools/"}
anyhow = "1.0.40"
